src/static/styles/main.scss
@import '~@atb-as/theme/lib/theme.css';

* {
    box-sizing: border-box;
}

:root {
    --background: #e7e8e9;
    --primary-2: #71d6e0;
    --primary-2-hover: rgba(113, 214, 224, 0.8);
    --primary: #000;
    --section-background: #fff;

    --maxPageWidth: 976px;
}

html,
body {
    min-height: 100vh;
}

body {
    margin: 0;
}

input,
button {
    font-family: var(--font-main);
    // Explicitly set font size as 16px to avoid mobile zoom on focus.
    font-size: 16px;
    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
}

.container {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: var(--colors-background_1-color);
    background-color: var(--colors-background_1-backgroundColor);

    line-height: var(--baseTypo-body__primary-lineHeight, 1.25rem);
    letter-spacing: var(--baseTypo-body__primary-letterSpacing, 0.03125rem);
}
.app {
    flex: 1;
    position: relative;
    background: url('/images/background-illustration.svg') no-repeat center top;
    background-size: contain;
}
.content {
    position: relative;
    margin: auto;
    padding: var(--spacings-xLarge);
    max-width: var(--maxPageWidth);
}

a:link,
a:active,
a:visited {
    color: #fc6;
}

a:hover {
    color: #ff9;
}

p {
    margin: 0;
    padding: 0;
}

.box {
    background-color: transparent;
    color: var(--primary);
    padding: 2rem;
    margin: 1rem;
    border-radius: 8px;
}

.pageHeader {
    background-color: var(--colors-primary_2-backgroundColor);
}
.pageHeader__content {
    width: 100%;
    max-width: var(--maxPageWidth);
    margin: 0 auto;
    padding: 0 var(--spacings-large);
    display: flex;
}

.pageHeader__logo {
    padding: 0;
    margin: 0;
    margin-right: var(--spacings-medium);
}
.pageHeader__logo a {
    display: flex;
    align-items: center;
    white-space: nowrap;
    padding: var(--spacings-medium);

    svg {
        display: block;
        height: 1.25rem;
        margin-right: var(--spacings-medium);
    }
}
.pageHeader__nav {
    flex: 1;
    display: flex;
}
.pageHeader__nav ul {
    display: flex;
    list-style: none;
    padding: 0;
    margin: 0;
    align-items: center;
    flex: 1;
}
.pageHeader__nav li:last-child {
    margin-left: auto;
}
.pageHeader__nav__item--active {
    text-decoration: underline;
}
.pageHeader__nav a {
    display: block;
    padding: var(--spacings-medium);
}
.pageHeader__nav__logout {
    background: transparent;
    border: 0;
    cursor: pointer;
    display: flex;
    align-items: center;

    svg {
        margin-left: var(--spacings-small);
    }
}
.pageHeader__content a,
.pageHeader__nav__logout {
    font-size: var(--baseTypo-body__primary--bold-fontSize, 1rem);
    line-height: var(--baseTypo-body__primary--bold-lineHeight, 1.25rem);
    letter-spacing: var(
        --baseTypo-body__primary--bold-letterSpacing,
        0.03125rem
    );
    font-weight: var(--baseTypo-body__primary--bold-fontWeight, 500);
    color: var(--colors-primary_2-color);
    text-decoration: none;
    transition: all 150ms ease;
}
.pageHeader__content a:hover,
.pageHeader__nav__logout:hover {
    opacity: 0.6;
}

.authErrorBox {
    position: absolute;
    width: 100%;
    top: 0;

    background: var(--colors-primary_destructive-backgroundColor);
    transition: transform 150ms ease-in;
    transform: translateY(-100%);
}
.authErrorBox--active {
    transform: translateY(0);
}
.authErrorBox__content {
    max-width: var(--maxPageWidth);
    margin: 0 auto;
}

// Page layouts

.button-loading {
    width: 20px;
    height: 20px;
    display: inline-block;
    border: 5px solid rgba(0, 0, 0, 0.4);
    border-right-color: transparent;
    border-radius: 50%;
    animation: rotation 1s infinite linear;
}

@keyframes rotation {
    0% {
        transform: rotate(0);
    }
    100% {
        transform: rotate(359deg);
    }
}

.page-onboarding {
    margin-top: 96px;
    width: 320px;
    margin-left: auto;
    margin-right: auto;

    input {
        border: none;
        outline: none;
        background: inherit;
        margin: 0;
        padding: 0;
    }

    .consent {
        display: flex;

        > :first-child {
            flex-grow: 1;
        }
    }

    .button,
    .no-button {
        padding: 24px;
        font-weight: 500;
        display: flex;
        cursor: pointer;

        > :first-child {
            flex-grow: 1;
        }
    }

    .button {
        background-color: #71d6e0;
        border-radius: 12px;
    }
}

.page-history {
    display: grid;
    grid-gap: 24px;
    grid-template-columns: 320px 1fr;

    .sidebar {
        width: 320px;

        input {
            border: none;
            outline: none;
            background: inherit;
            margin: 0;
            padding: 0;
        }
    }

    .main {
        .order-header {
            display: flex;
            font-weight: 500;
            cursor: pointer;

            > div {
                &:first-child {
                    flex-grow: 1;
                }
            }
        }
    }

    .receipt-button {
        display: flex;
        cursor: pointer;
        background-color: inherit;
        border: none;
        width: 100%;
        padding: 1.5rem;
        border-radius: 0.25rem;
        appearance: none;
        text-align: left;
        align-items: center;

        > div:first-child {
            flex-grow: 1;
            font-weight: 500;
        }
    }
}

.page {
    display: grid;
    grid-gap: var(--spacings-xLarge);
    grid-template-columns: 2fr 1fr;
    padding-bottom: 5rem;

    input[type='time'],
    input[type='date'] {
        box-shadow: none;
        outline: none;
        border: none;
        background: inherit;
    }
}
.page > :only-child {
    grid-column: 1/-1;
}
.page--login {
    max-width: 22.5rem;
    margin: 3.25rem auto;
    grid-template-columns: 1fr;
}

.page--overview {
    grid-template-columns: 1fr 2fr;

    .ticket-header {
        display: flex;

        > div.product-name {
            font-weight: 500;
            flex-grow: 1;
            padding-left: 12px;
        }
    }

    .ticket-progress {
        height: 8px;
        min-height: 8px;
        background-color: #a2ad00;
        background-image: linear-gradient(
            -45deg,
            transparent 12px,
            rgba(0, 0, 0, 0.6) 12px,
            rgba(0, 0, 0, 0.6) 20px,
            transparent 20px,
            transparent
        );
        background-size: 60px 8px;
        animation: ticket-progress-move 2s linear infinite;
        margin: 0;
        padding: 0;
    }

    .ticket-info {
        font-size: 32px;
        line-height: 40px;
        margin: 0;
        padding: 0;
    }

    .ticket-waiting {
        display: grid;
        place-items: center;

        svg {
            fill: var(--primary-2);
            height: 30px;
            width: 120px;
        }
    }
}
.pageOverview__empty {
    text-align: center;

    img {
        display: block;
        margin: var(--spacings-xLarge) auto;
    }
}

.accountInfo__item {
    display: flex;
    svg {
        display: block;
        margin-right: var(--spacings-medium);
    }
}

// Basic responsiveness for pages

@media (max-width: 768px) {
    main {
        padding: var(--spacings-medium);
    }

    .page-history,
    .page {
        grid-template-columns: 1fr;
    }
}

.pageLogin__header {
    position: absolute;
    width: 100%;
    top: var(--spacings-xLarge);
}
.pageLogin__illustration {
    display: block;
    margin: 0 auto;
    max-width: 100%;
}

// Components

.toggle {
    cursor: pointer;
}

.section-box {
    margin-bottom: 24px;
    border-radius: 12px;
    background: var(--section-background);
    overflow: hidden;

    > div {
        border-bottom: 1px solid var(--background);
        min-height: 68px;
        padding: 24px;
        display: grid;
        place-items: center start;

        label {
            font-weight: 400;
            font-size: 12px;
            line-height: 16px;
            margin-bottom: 2px;
            color: rgba(0, 0, 0, 0.6);
        }

        &:last-child {
            border-bottom: none;
        }

        &.active {
            background-color: #cfd2d3;
        }
    }

    > div.two-col {
        display: grid;
        grid-template-columns: 1fr 1fr;

        > div {
            display: grid;
            place-items: center start;

            > label {
                font-weight: 400;
                font-size: 12px;
                line-height: 16px;
                margin-bottom: 2px;
                color: rgba(0, 0, 0, 0.6);
            }
        }
    }

    .action-button {
        background: inherit;
        border: none;
        font-weight: bold;
        margin: 0;
        padding: 0;
        line-height: 1em;
        align-self: center;
    }

    .buy-button {
        border: none;
        font-weight: bold;
        margin: 0;
        padding: 0;
        line-height: 1em;
        align-self: center;
        background-color: #37424a;
        color: #fff;

        > button {
            background: inherit;
            color: inherit;
            border: none;
            font-weight: bold;
            margin: 0;
            padding: 0 1rem;
            line-height: 1em;
            align-self: center;
        }

        .disabled-button {
            opacity: 0.5;
        }
    }

    .disabled-button {
        background: inherit;
        border: none;
        font-weight: bold;
        margin: 0;
        padding: 0;
        line-height: 1em;
        align-self: center;
        opacity: 0.5;
    }

    .section-header {
        font-weight: 500;
        margin: 0;
        padding: 0 1.5rem;
        line-height: 1em;
        align-self: center;
    }
}

.metadata-list {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 12px;
}

.ticket-list {
    width: 100%;
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    grid-gap: 12px;
}

.pseudo-button {
    cursor: pointer;
}

.pseudo-button-disabled {
    opacity: 0.5;
}

.buy-button-new {
    background-color: #37424a;
    color: #fff;

    &.disabled-button-new > * {
        opacity: 0.5;
    }
}

.summary-price {
    text-align: right;
    font-size: 32px;
    place-items: center end;
}

@keyframes ticket-progress-move {
    0% {
        background-position: 0 0;
    }
    100% {
        background-position: 60px 0;
    }
}

.tab-bar {
    margin: 1rem;
    padding: 0.5rem;
    background-color: #00323a;
    color: #fff;
    border-radius: 8px;

    a {
        display: inline-block;
        padding: 0.5rem;
        text-decoration: none;
        margin-right: 0.5rem;
        outline: none;

        &.selected-tab {
            background-color: #044;
        }
    }
}

dl {
    margin-bottom: 1rem;
}

dl dt {
    float: left;
    font-weight: normal;
    margin-right: 0.25rem;
    padding: 0.25rem;
    width: 100px;
    text-align: right;
}

dl dd {
    margin: 0;
    padding: 0;
}

table {
    border-collapse: collapse;
    margin: 1rem 0;

    th,
    td {
        padding: 0.5rem;
        border: 1px solid #345d63;
    }
}

.shop-user button {
    min-width: 1rem;
}

.shop-user tr td:nth-child(1),
.shop-user tr td:nth-child(2),
.shop-user tr td:nth-child(3) {
    width: 3rem;
    text-align: center;
}

.info-box {
    background-color: #007c92;
    color: #fff;
    padding: 24px;
    margin-bottom: 24px;
    display: grid;
    grid-template-columns: 30px 1fr;

    svg {
        width: 20px;
        height: 20px;

        path {
            fill: #fff;
        }
    }
}

@import 'waiting';
@import 'ui';

// Take priority
@import '~@atb-as/theme/lib/typography.css';

